--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
 
   <body>
     <header class="header-page">
-      <nav class="nav-header">
-        <a class="header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="container header-container">
+        <nav class="nav-header">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
       <address class="address">
         <ul class="address-list">
           <li class="address-item">
@@ -53,169 +54,180 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
 
     <main>
       <section class="banner">
-        <h1 class="banner-h">Effective Solutions for Your Business</h1>
-        <button class="banner-button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="banner-h">Effective Solutions for Your Business</h1>
+          <button class="banner-button" type="button">Order Service</button>
+        </div>
       </section>
 
       <section>
-        <h2 hidden>our capabilities</h2>
-        <ul>
-          <li>
-            <h3 class="names">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="names">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="names">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="names">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">our capabilities</h2>
+          <ul>
+            <li>
+              <h3 class="names">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="names">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="names">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="names">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="name">
-        <h2 class="name-section">Our Team</h2>
-        <ul>
-          <li class="foto-fon">
-            <img
-              src="./images/img-1.jpg"
-              alt="Mark Guerrero Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="names">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="foto-fon">
-            <img
-              src="./images/img-2.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="names">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="foto-fon">
-            <img
-              src="./images/img-3.jpg"
-              alt="Camila Garcia Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="names">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="foto-fon">
-            <img
-              src="./images/img-4.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="names">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="name-section">Our Team</h2>
+          <ul>
+            <li class="foto-fon">
+              <img
+                src="./images/img-1.jpg"
+                alt="Mark Guerrero Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="names">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="foto-fon">
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="names">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="foto-fon">
+              <img
+                src="./images/img-3.jpg"
+                alt="Camila Garcia Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="names">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="foto-fon">
+              <img
+                src="./images/img-4.jpg"
+                alt="Daniel Wilson UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="names">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <h2 class="name-section">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-10.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-11.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-12.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-13.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-14.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-15.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="names">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="name-section">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/img-10.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Banking App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-11.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-12.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Meditation App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-13.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-14.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-15.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="names">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer-page">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
