--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
       <section class="banner">
-        <div class="container">
+        <div class="container banner-container">
           <h1 class="banner-h">Effective Solutions for Your Business</h1>
           <button class="banner-button" type="button">Order Service</button>
         </div>
