--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
     <main>
       <section class="banner">
         <div class="container banner-container">
-          <h1 class="banner-h">Effective Solutions for Your Business</h1>
-          <button class="banner-button" type="button">Order Service</button>
+          <div class="banner-top">
+            <h1 class="banner-h">Effective Solutions for Your Business</h1>
+          </div>
+          <div class="button"><button class="banner-button" type="button">Order Service</button></div>
         </div>
       </section>
 
-      <section>
+      <section class="capabilities">
         <div class="container">
           <h2 class="visually-hidden">our capabilities</h2>
           <ul>
@@ -104,7 +106,7 @@
       <section class="name">
         <div class="container">
           <h2 class="name-section">Our Team</h2>
-          <ul>
+          <ul class="name-list">
             <li class="foto-fon">
               <img
                 src="./images/img-1.jpg"
@@ -149,10 +151,10 @@
         </div>
       </section>
 
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="name-section">Our Portfolio</h2>
-          <ul>
+          <ul class="portfolio-list">
             <li>
               <img
                 src="./images/img-10.jpg"
@@ -160,8 +162,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Banking App</h3>
-              <p class="section-text">App</p>
+              <div class="frame">
+                <h3 class="names">Banking App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -170,8 +174,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <div class="frame">
+                <h3 class="names">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -180,8 +186,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Meditation App</h3>
-              <p class="section-text">App</p>
+              <div class="frame">
+                <h3 class="names">Meditation App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -190,8 +198,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <div class="frame">
+                <h3 class="names">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -200,8 +210,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <div class="frame">
+                <h3 class="names">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -210,8 +222,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="names">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <div class="frame">
+                <h3 class="names">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
