--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="capabilities">
         <div class="container">
           <h2 class="visually-hidden">our capabilities</h2>
-          <ul>
+          <ul class="capabilities-list">
             <li>
               <h3 class="names">Strategy</h3>
               <p class="section-text">
@@ -114,8 +114,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="names">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="names-text">
+                <h3 class="names">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
             <li class="foto-fon">
               <img
@@ -124,8 +126,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="names">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <div class ="names-text">
+                <h3 class="names">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="foto-fon">
               <img
@@ -134,8 +138,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="names">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <div class ="names-text">
+                <h3 class="names">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li class="foto-fon">
               <img
@@ -144,8 +150,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="names">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <div class ="names-text">
+                <h3 class="names">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -154,80 +162,87 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="name-section">Our Portfolio</h2>
-          <ul class="portfolio-list">
-            <li>
-              <img
-                src="./images/img-10.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Banking App</h3>
-                <p class="section-text">App</p>
+          <div class="portfolio-container">
+            <ul class="portfolio-list">
+              <div class="portfolio-item-top">
+                <li>
+                  <img
+                    src="./images/img-10.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Banking App</h3>
+                    <p class="section-text">App</p>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./images/img-11.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Cashless Payment</h3>
+                    <p class="section-text">Marketing</p>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./images/img-12.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Meditation App</h3>
+                    <p class="section-text">App</p>
+                  </div>
+                </li>
               </div>
-            </li>
-            <li>
-              <img
-                src="./images/img-11.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Cashless Payment</h3>
-                <p class="section-text">Marketing</p>
+              <div class="portfolio-item">
+                <li>
+                  <img
+                    src="./images/img-13.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Taxi Service</h3>
+                    <p class="section-text">Marketing</p>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./images/img-14.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Screen Illustrations</h3>
+                    <p class="section-text">Design</p>
+                  </div>
+                </li>
+                <li>
+                  <img
+                    src="./images/img-15.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="frame">
+                    <h3 class="names">Online Courses</h3>
+                    <p class="section-text">Marketing</p>
+                  </div>
+                </li>
               </div>
-            </li>
-            <li>
-              <img
-                src="./images/img-12.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Meditation App</h3>
-                <p class="section-text">App</p>
-              </div>
-            </li>
-            <li>
-              <img
-                src="./images/img-13.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Taxi Service</h3>
-                <p class="section-text">Marketing</p>
-              </div>
-            </li>
-            <li>
-              <img
-                src="./images/img-14.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Screen Illustrations</h3>
-                <p class="section-text">Design</p>
-              </div>
-            </li>
-            <li>
-              <img
-                src="./images/img-15.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="frame">
-                <h3 class="names">Online Courses</h3>
-                <p class="section-text">Marketing</p>
-              </div>
-            </li>
-          </ul>
+
+            </ul>
+          </div>
         </div>
       </section>
     </main>
