--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
         <div class="container">
           <h2 class="visually-hidden">our capabilities</h2>
           <ul class="capabilities-list">
-            <li>
+            <li class="capabilities-item">
               <h3 class="names">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="capabilities-item">
               <h3 class="names">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="capabilities-item">
               <h3 class="names">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="capabilities-item">
               <h3 class="names">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -163,8 +163,7 @@
         <div class="container">
           <h2 class="name-section">Our Portfolio</h2>
           <div class="portfolio-container">
-            <ul class="portfolio-list">
-              <div class="portfolio-item-top">
+            <ul class="portfolio-list">             
                 <li>
                   <img
                     src="./images/img-10.jpg"
@@ -201,8 +200,6 @@
                     <p class="section-text">App</p>
                   </div>
                 </li>
-              </div>
-              <div class="portfolio-item">
                 <li>
                   <img
                     src="./images/img-13.jpg"
@@ -239,8 +236,6 @@
                     <p class="section-text">Marketing</p>
                   </div>
                 </li>
-              </div>
-
             </ul>
           </div>
         </div>
