--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 
     <main>
       <section class="banner">
-        <div class="container banner-container">
-          <div class="banner-top">
-            <h1 class="banner-h">Effective Solutions for Your Business</h1>
-          </div>
+        <div class="container">
+            <h1 class="banner-h">Effective Solutions for Your Business</h1>  
           <div class="button"><button class="banner-button" type="button">Order Service</button></div>
         </div>
       </section>
@@ -162,9 +160,8 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="name-section">Our Portfolio</h2>
-          <div class="portfolio-container">
             <ul class="portfolio-list">             
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-10.jpg"
                     alt="Banking App"
@@ -176,7 +173,7 @@
                     <p class="section-text">App</p>
                   </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-11.jpg"
                     alt="Cashless Payment"
@@ -188,7 +185,7 @@
                     <p class="section-text">Marketing</p>
                   </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-12.jpg"
                     alt="Meditation App"
@@ -200,7 +197,7 @@
                     <p class="section-text">App</p>
                   </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-13.jpg"
                     alt="Taxi Service"
@@ -212,7 +209,7 @@
                     <p class="section-text">Marketing</p>
                   </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-14.jpg"
                     alt="Screen Illustrations"
@@ -224,7 +221,7 @@
                     <p class="section-text">Design</p>
                   </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                   <img
                     src="./images/img-15.jpg"
                     alt="Online Courses"
@@ -237,7 +234,6 @@
                   </div>
                 </li>
             </ul>
-          </div>
         </div>
       </section>
     </main>
