--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="banner">
         <div class="container">
             <h1 class="banner-h">Effective Solutions for Your Business</h1>  
-          <div class="button"><button class="banner-button" type="button">Order Service</button></div>
+          <button class="banner-button" type="button">Order Service</button>
         </div>
       </section>
 
